supplier ui redesign & other fixes

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -58,7 +58,7 @@
     }
 
     .welcome-panel .hero-image {
-      max-width: 70%;
+      width: 110%;
       height: auto;
       display: block;
       margin: 0 auto;
